Desktop view: - icons alignment fix

--- a/style/main.scss
+++ b/style/main.scss
@@ -156,6 +156,7 @@ hr {
 .contacts {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   width: 30%;
 
